Changes to be committed: 	modified:   .gitignore 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   model/user_photoinfo.go 	modified:   router/photo_server.go 	modified:   service/user_basic_management.go 	new file:   service/user_communicate.go
